# modis

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.MD
.github/workflows/: continuous-integration.yml
docker/: Dockerfile  Dockerfile-dev  build  cibuild  console  docs-server  format  notebook  stac  test
examples/: catalog.json  file-list-006.txt  file-list-061.txt  file-list.txt
examples/modis-006/: catalog.json
examples/modis-061/: catalog.json
examples/modis-MCD12Q1-006/: collection.json
examples/modis-MCD43A4-006/: collection.json
examples/modis-MOD10A1-006/: collection.json
examples/modis-MOD11A1-006/: collection.json
examples/modis-MOD11A2-006/: collection.json
examples/modis-MOD13A1-006/: collection.json
examples/modis-MOD13Q1-006/: collection.json
examples/modis-MOD14A1-006/: collection.json
examples/modis-MOD14A2-006/: collection.json
examples/modis-MOD15A2H-006/: collection.json
examples/modis-MOD16A3GF-006/: collection.json
examples/modis-MOD17A2H-006/: collection.json
examples/modis-MOD17A2HGF-006/: collection.json
examples/modis-MOD17A3HGF-006/: collection.json
examples/modis-MOD21A2-006/: collection.json
scripts/: add_classification_2022_03_30.py  add_publications.py  create_expected.py  create_fragments.py  download_external_data.py  fixup_2022_03_21.py  fixup_2022_03_25.py  lint  publish  test
tests/: __init__.py  conftest.py  create_expected.py  test_cog.py  test_commands.py  test_file.py  test_stac.py
(+854 files in other folders)
