[metadata]
name = stactools-modis
version = attr: stactools.modis.__version__
description = stactools package for MODIS data
long_description = file: README.md
long_description_content_type = text/markdown
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
url = https://github.com/stactools-modis/stactools-modis
project_urls =
    Documentation = https://stactools-modis.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-modis/stactools-modis/issues
keywords = 
    stactools
    pystac
    catalog
    STAC
    MODIS
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
package_dir =
    = src
packages = 
    stactools.modis
    stactools.modis.fragments
install_requires =
    stactools @ git+https://github.com/stac-utils/stactools@f31524f03308df94b4836c92abb779f194e34567

[options.packages.find]
where = src

[options.package_data]
stactools.modis = fragments/*/*/*.json
